fix(drawer): add padding and center align close btn

--- a/src/components/Drawer/sgds-drawer.scss
+++ b/src/components/Drawer/sgds-drawer.scss
@@ -77,6 +77,7 @@
 
   .drawer-header {
     display: flex;
+    padding: var(--sgds-drawer-padding);
   }
 
   .drawer-title {
@@ -84,7 +85,7 @@
     font: inherit;
     font-size: calc(1.275rem + 0.3vw);
     line-height: 1.33;
-    padding: var(--sgds-drawer-padding);
+    
     margin: 0;
   }
 
@@ -101,7 +102,7 @@
   .drawer-header-actions .drawer-close {
     flex: 0 0 auto;
     display: flex;
-    align-items: center;
+    align-self: center;
   }
 
   .drawer-body {
